--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -44,12 +44,12 @@
 ///*PARTIALS 1*/
 ///*======================================================*/
 @import partials/header
-@import partials/navigation
+@import partials/shutter
 
 ///*======================================================*/
 ///*COMPONENTS*/
 ///*======================================================*/
-
+@import components/navigation
 @import components/social
 @import components/share-box
 @import components/breadcrumbs
@@ -57,9 +57,11 @@
 @import components/sliders
 @import components/accordion-simple
 @import components/j-filer
+@import components/tabs-light
 @import components/user-form
-@import components/search-form.sass
+@import components/enter-form
 @import components/user-options
+@import components/search-form.sass
 @import components/bitrix-search
 @import components/pagination-2
 @import components/feature-list
