--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -123,7 +123,7 @@
 		.ea-site &
 			background-color: transparent
 
-		.nav-popup-before-open &
+		.shutter--before-open &
 			transform: translate(50%, 0)
 			opacity: 0
 			visibility: hidden
@@ -218,7 +218,7 @@
 	.ea-site &
 		display: none
 
-.nav-popup-before-open
+.shutter--before-open
 
 	.logo
 
@@ -253,7 +253,7 @@
 	.no-touchevents &:hover
 		background-color: $bg-color-light
 
-	.fp-is-bottom &, .nav-popup-before-open &
+	.fp-is-bottom &, .shutter--before-open &
 		opacity: 0
 		visibility: hidden
 		transform: translate(0, 100%)
