--- a/src/sass/components/_search-form.sass
+++ b/src/sass/components/_search-form.sass
@@ -3,6 +3,9 @@
 @import ../../libs/include-media/dist/include-media
 
 /*search form
+.search-form
+	+padding-vertical(50px)
+
 .search-form, .search-form__field
 	position: relative
 	margin-bottom: $bottom-space--md
@@ -10,119 +13,61 @@
 	&:last-child
 		margin-bottom: 0
 
-.search-extended-panel
-	padding-bottom: $bottom-space--md
+.search-form .light-form
+	.label-holder
+		+font-bold
+		+font(48px, 52px)
 
-.search-extended-panel__holder
-	border: 1px solid $border-color
-	padding: $grid-inside-vertical-space $grid-inside-horizontal-space
-	background-color: $bg-color-light
+		&::before
+			border-top-width: 2px
 
-.search-form__field
-	overflow: hidden
-	position: relative
-	margin: 0 #{$page-layout-space-horizontal}
-
-	+media('<tab-lg')
-		margin: 0 #{$text-layout-space-horizontal--md}
-
+	label
+		height: 76px
+		+padding-vertical(12px)
 
 input.search-form__input
-	cursor: pointer
-
-	+search-form-placeholder($color: $text-color-light, $tsp: color, $tsd: $animation-speed)
-
-	&, &:hover, &:focus
-		display: block
-		position: relative
-		border: none
-		height: 64px
-		width: 100%
-		padding: 11px #{$search-form-popup-btn-width+10} 11px 0
-		margin: 0
-		+font-normal
-		+font(36px, 42px)
-		color: $text-color
-		border-radius: 0
-		background: none
-		box-shadow: none
-		border-bottom: 1px solid $border-color
-
-		.no-touchevents &:hover
-			border-bottom-color: $border-color
-
-		+media('<desk-lg')
-			font-size: 20px
-
-		+media('<mob-lg')
-			font-size: 18px
-			padding-right: $search-form-popup-btn-width--mob-lg
-
-	// если поле ввода В ФОКУСЕ, или ЗАПОЛНЕННО
-	.input--filled &, &:focus
-		cursor: text
+	&, .light-form &
+		padding: 12px #{$search-form-popup-btn-size+12} 12px 0
+		+font-bold
+		+font(48px, 52px)
+		height: 76px
 
 // кнопка поиска
 .search-form__btn
 	position: absolute
 	right: 0
 	top: 50%
-	margin-top: -20px
-	+size($search-form-popup-btn-width, $search-form-popup-btn-height)
-	font-family: $font-alt
+	+size($search-form-popup-btn-size)
+	margin-top: -#{round($search-form-popup-btn-size*0.5)}
+	+font-normal
 	+clear-spacing
 	text-align: center
-	color: white
-	fill: white
 	z-index: 5
-	background-color: $text-color-alt
-	transition-property: color
+	transition-property: color, fill
 	transition-duration: $animation-speed
-
-	+media('<mob-lg')
-		width: $search-form-popup-btn-height
-
-	&::before
-		+vertical-align()
+	// цвет текста и svg иконки
+	color: $text-color
+	fill: $text-color
 
 	input
-		display: block
 		+cover-abs()
 		padding: 0
-		z-index: 99
 		border: 0
 		opacity: 0
+		z-index: 99
 
 	svg
-		+display-inline-block-top
-		position: relative
-		top: 50%
-		+size(16px)
-		margin-top: -8px
-		//margin-right: 10px
-		margin-right: 0
-
-		+media('<mob-lg')
-			margin-right: 0
+		display: inline-block
+		position: absolute
+		+position(50%)
+		+size($search-form-popup-btn-size)
+		margin: -#{round($search-form-popup-btn-size*0.5)} 0 0 -#{round($search-form-popup-btn-size*0.5)}
 
 	path
 		fill: inherit
-		transition: fill $animation-speed
+		transition: inherit
 
 	span
-		//+display-inline-block-middle
-		display: none
-		+font(16px, $search-form-popup-btn-height)
-		letter-spacing: normal
-		color: inherit
-		transition-property: color
-		transition-duration: $animation-speed
-		+antialiased
-
-		+media('<mob-lg')
-			+hide-text
-
-	.input--filled &
-		z-index: 999
+		+hide-text
 
 /*search form end
