--- a/src/sass/partials/_shutter.sass
+++ b/src/sass/partials/_shutter.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*navigation*/
+/* shutter
 html.css-scroll-fixed
 
 	&.touchevents
@@ -13,14 +13,14 @@ html.css-scroll-fixed
 	transition-duration: 0.2s
 	transition-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1)
 
-	.nav-popup-before-open &
+	.shutter--before-open &
 		transform: translate($nav-width - 250, 0)
 		//transition-delay: 0.1s
 
 		+media('<tab-lg')
 			transform: none
 
-.nav-wrap
+.shutter
 	overflow: hidden // необходим для скрытия скролла
 	position: fixed
 	+position(0, #{$header-width})
@@ -39,13 +39,13 @@ html.css-scroll-fixed
 		//height: calc(100vh - #{$top-panel-height--md})
 		max-width: none
 		padding-top: 0
-		
-		//&::before
-			+pseudo()
-			+position(-40px, 0)
-			+size(100%, 40px)
-			box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2)
-			z-index: 5
+
+//&::before
+	+pseudo()
+	+position(-40px, 0)
+	+size(100%, 40px)
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2)
+	z-index: 5
 
 //&::before
 	+pseudo()
@@ -61,7 +61,7 @@ html.css-scroll-fixed
 	+media('<tab-lg')
 		content: none
 
-.nav-wrap__align
+.shutter__align
 	width: calc(100% + 100px)
 	overflow-x: hidden
 	overflow-y: auto
@@ -69,9 +69,8 @@ html.css-scroll-fixed
 
 	+media('<tab-lg')
 		width: 100%
-		//height: calc(100vh - #{$top-panel-height--md})
 
-.nav-wrap__holder
+.shutter__holder
 	//display: table
 	//min-height: 100vh // не работает в фф
 	display: flex
@@ -82,7 +81,6 @@ html.css-scroll-fixed
 
 	+media('<tab-lg')
 		width: 100%
-		//min-height: calc(100vh - #{$top-panel-height--md})
 
 	// для браузеров не поддерживающих display: flex
 	.no-flexbox &
@@ -96,7 +94,7 @@ html.css-scroll-fixed
 			display: table
 			table-layout: fixed
 
-.nav-wrap__row
+.shutter__row
 
 	// для браузеров не поддерживающих display: flex
 	.no-flexbox &
@@ -108,7 +106,7 @@ html.css-scroll-fixed
 		&::-ms-backdrop, &
 			display: table-row
 
-.nav-wrap__cell
+.shutter__cell
 	// для браузеров не поддерживающих display: flex
 	.no-flexbox &
 		display: table-cell
@@ -121,7 +119,8 @@ html.css-scroll-fixed
 			display: table-cell
 			vertical-align: middle
 
-.nav-title
+/* shutter header
+.shutter-header
 	position: relative
 	border: 0 solid darken($bg-color-light, 20%)
 
@@ -130,164 +129,24 @@ html.css-scroll-fixed
 		padding: 15px #{$text-layout-space-horizontal--md + $top-panel-height--md} 15px #{$text-layout-space-horizontal--md}
 		border-bottom-width: 1px
 
-.logo-nav
-	display: block
-	padding: 15px #{$page-layout-space-horizontal}
-	text-decoration: none
-	color: $text-color
-	border-style: solid
-	border-color: inherit
-	border-width: 0 0 1px
-	background-color: $bg-color-light
-	transition-property: color, background-color
-	transition-duration: $animation-speed
+/* shutter header end
 
-	.no-touchevents &:hover
-		background-color: darken($bg-color-light, 10%)
-
-	// главная ДВЭМЗ
-	.home-page &
-		color: white
-		background-color: $logo-bg-color
-
-	.no-touchevents .home-page &:hover
-		background-color: lighten($logo-bg-color, 10%)
-	// главная ДВЭМЗ end
-
-	+media('<tab-lg')
-		+display-inline-block-top
-		padding: 0
-		border: none
-		//background-color: transparent
-		//border-color: #ccc
-
-.logo-nav__img
-	+display-inline-block-middle
-	+size(152px, auto)
-	background-image: url(../../img/logo.png)
-	background-size: 100%
-	background-repeat: no-repeat
-	margin-bottom: 10px
-
-	&::before
-		+pseudo-block-relative()
-		+ratio(152, 47)
-
-	& > span
-		+hide-text
-
-	.home-page &
-		background-position: 0 100%
-
-	.ea-site &
-		+size(178px, auto)
-		background-image: url(../../img/logo--ea.png)
-
-		&::before
-			+ratio(178, 42)
-
-		+media('<tab-lg')
-			width: 144px
-
-.logo-nav__title
-	display: block
-	+font(10px, 14px)
-	letter-spacing: 0.05em
-	text-transform: uppercase
-
-.popup-overlay--nav
-	+media('<tab-lg')
-		top: #{$top-panel-height--md} !important
-
-.nav
-	position: relative
-	padding: 30px #{$page-layout-space-horizontal}
-	//top: 50%
-	//transform: translate(0, -50%)
-	//+antialiased
-
-	+media('<tab-lg')
-		padding: 30px #{$text-layout-space-horizontal--md}
-
-.nav__list
-	+font-normal
-	+font(24px, 32px)
-	color: $text-color
-
-	+media('<tab-lg')
-		text-align: center
-
-	li
-		position: relative
-		margin: 1em 0 0
-
-		&:first-child
-			margin-top: 0
-
-	+media('height<600px')
-		+font(20px, 28px)
-
-		li
-			margin-top: 0.5em
-
-			&:first-child
-				margin-top: 0
-
-	a
-		display: inline-block
-		color: inherit
-		text-decoration: none
-		transition-property: color
-		transition-duration: $animation-speed
-
-		& > span
-			+display-inline-block-top
-			position: relative
-			overflow: hidden
-
-			&::after
-				+pseudo()
-				left: 0
-				bottom: 0
-				+size(100%, 0)
-				border-top: 1px solid lighten($text-color, 60%)
-				transform: translate(-100%, 0)
-				transition-property: transform, filter
-				transition-duration: $animation-speed
-
-	// hover
-	.no-touchevents & a:hover
-		& > span
-			&::after
-				transform: translate(0, 0)
-
-	// current
-	li.current
-		a
-			color: $base-color
-			//+font-bold
-
-			.ea-site &
-				color: $base-color--ea
-
-			& > span
-				&::after
-					content: none
-
-/*navigation end*/
-
-.nav-footer
+/* shutter footer
+.shutter-footer
 	//position: absolute
 	//left: 0
 	//bottom: 0
 	//width: 100%
-	padding: 0 #{$page-layout-space-horizontal} 30px
+	padding: 0 #{$text-layout-space-horizontal--lg} 30px
 	+font(1.2rem, 1.6)
 	color: $text-color
 
 	+media('<tab-lg')
-		padding: 0 #{$text-layout-space-horizontal--md} 30px
+		+padding-horizontal($text-layout-space-horizontal--md)
 		text-align: center
+
+	+media('<tab-sm')
+		+padding-horizontal($text-layout-space-horizontal--sm)
 
 	.copyright
 		margin-bottom: 1em
@@ -313,12 +172,36 @@ html.css-scroll-fixed
 			.no-touchevents &:hover
 				color: $base-color
 
-/* button catalog menu close
-.btn-nav-close
-	display: none
-	position: absolute
-	right: 0
-	top: 0
+/* shutter footer end
+
+/* button shutter close
+.shutter
+	.btn-popup-close
+		display: none
+		position: absolute
+		right: 0
+		top: 0
+
+		+media('<tab-lg')
+			display: block
+
+/* button shutter close end
+
+/* shutter wide
+
+
+.shutter-wide
+	max-width: calc(100% - #{$header-width})
 
 	+media('<tab-lg')
-		display: block
+		max-width: 100%
+
+	.shutter__align
+		width: 100%
+
+	.shutter__holder
+		width: 100%
+
+/* shutter wide end
+
+/* shutter end
