--- a/src/sass/partials/_forms-light.sass
+++ b/src/sass/partials/_forms-light.sass
@@ -79,6 +79,7 @@
 	&.input--focus, &.input--has-value
 		input[type="text"], input[type="password"], input[type="email"], input[type="search"], textarea
 			cursor: text
+			box-shadow: none
 
 		.label-holder
 			color: $text-color-light
