--- a/src/sass/partials/_sidebar.sass
+++ b/src/sass/partials/_sidebar.sass
@@ -12,6 +12,9 @@
 	background-color: $base-color
 	z-index: 998
 
+	+media('<desk-md')
+		display: none
+
 	.side-menu--alt &
 		width: $sidebar-width--lg
 		overflow-x: hidden
