--- a/src/sass/components/_files.sass
+++ b/src/sass/components/_files.sass
@@ -82,6 +82,9 @@
 	border-left: 1px solid $outline-color
 	background-color: $base-color
 
+	.ea-site &
+		background-color: $base-color--ea
+
 	span
 		+hide-text
 
