--- a/src/sass/partials/_forms-default.sass
+++ b/src/sass/partials/_forms-default.sass
@@ -76,13 +76,20 @@ input[type="text"], input[type="password"], input[type="email"], input[type="sea
 	.no-touchevents &:hover
 		border-color: $form-border-focus-color
 
+	.no-touchevents .ea-site &:hover
+		border-color: $base-color--ea
+
 	//form focus
 	&:focus
 		border-color: $form-border-focus-color
 		box-shadow: inset 0 0 0 1px $form-border-focus-color
 
+		.ea-site &
+			border-color: $base-color--ea
+			box-shadow: inset 0 0 0 1px $base-color--ea
+
 	//form error
-	&.error, .no-touchevents &.error
+	&.error, .no-touchevents &.error, .ea-site &.error, .no-touchevents .ea-site &.error
 		color: $form-error-color
 		border-color: $form-error-color
 		box-shadow: inset 0 0 0 1px transparent
@@ -696,6 +703,7 @@ input[type="radio"]
 	.select2-container--default .select2-search--inline .select2-search__field
 		height: auto
 		margin: 0
+		box-shadow: none
 
 	// multiple
 	.select2-container--default .select2-selection--multiple
@@ -759,6 +767,9 @@ input[type="radio"]
 				//box-shadow: inset 0 0 0 1px $form-border-focus-color
 				box-shadow: none
 
+				//.ea-site &
+					border-color: $base-color--ea
+
 	.select2-results>.select2-results__options
 		max-height: 200px
 
@@ -768,6 +779,9 @@ input[type="radio"]
 	.select2-results__option--highlighted[aria-selected]
 		background-color: $base-color
 		color: $text-color
+
+		.ea-site &
+			background-color: $base-color--ea
 
 .select2-container--open
 	.select2-dropdown--below
