--- a/src/sass/components/_scroll-nav.sass
+++ b/src/sass/components/_scroll-nav.sass
@@ -17,6 +17,9 @@
 	.home-page &
 		right: $sidebar-width--lg + $scroll-nav-space
 
+		+media('<desk-md')
+			right: $scroll-nav-space
+
 	&, .#{$user-content} &
 		margin: 0
 
