--- a/src/sass/partials/_shutter.sass
+++ b/src/sass/partials/_shutter.sass
@@ -129,6 +129,9 @@ html.css-scroll-fixed
 		padding: 15px #{$text-layout-space-horizontal--md + $top-panel-height--md} 15px #{$text-layout-space-horizontal--md}
 		border-bottom-width: 1px
 
+		.home-page &
+			background-color: $logo-bg-color
+
 /* shutter header end
 
 /* shutter footer
