--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -74,6 +74,7 @@
 @import components/products-options
 @import components/catalog-list
 @import components/products-list
+@import components/goods-list
 @import components/catalog-menu
 @import components/view-switcher
 @import components/news-list
@@ -98,6 +99,7 @@
 ///*PAGES*/
 ///*======================================================*/
 @import pages/home
+@import pages/catalog
 
 ///*======================================================*/
 ///*THEMES*/
