--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -295,8 +295,8 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 
 		& > li
 			counter-increment: section
-			height: 1%
-			overflow: hidden
+			//height: 1%
+			//overflow: hidden
 
 			&::before
 				content: counter(section)
