--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -49,6 +49,7 @@
 ///*======================================================*/
 ///*COMPONENTS*/
 ///*======================================================*/
+@import components/v-middle
 @import components/navigation
 @import components/social
 @import components/share-box
