--- a/src/sass/partials/_shutter.sass
+++ b/src/sass/partials/_shutter.sass
@@ -8,14 +8,21 @@ html.css-scroll-fixed
 	&.touchevents
 		+scroll-blocked() // блокировка скролла во время открытия попапа (на тачскринах)
 
-.content-wrap, .scroll-nav, .side-menu, .top-panel, .footer__holder
+.content-wrap, .scroll-nav, .top-panel, .footer__holder
 	transition-property: transform
-	transition-duration: 0.2s
-	transition-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1)
+	transition-duration: $animation-speed
+	transition-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1) !important
 
 	.shutter--before-open &
 		transform: translate($nav-width - 250, 0)
-		//transition-delay: 0.1s
+
+		+media('<tab-lg')
+			transform: none
+
+//.side-menu
+	.shutter--before-open &
+		transform: translate($sidebar-drop-width, 0)
+		transition-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1)
 
 		+media('<tab-lg')
 			transform: none
