--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -161,6 +161,7 @@ $nav-width: 380px !default
 // sidebar
 $sidebar-width: 80px !default
 $sidebar-width--lg: 320px !default
+$sidebar-drop-width: 270px !default
 $side-menu-bg-color-hover: #999
 $side-menu-border-color: #999
 
