--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -13,10 +13,13 @@
 			left: 0
 			top: 0
 			width: 100%
-			height: 165px
+			height: 162px
 			z-index: -1
 			pointer-events: none
 			+linear-gradient(to bottom, rgba(0,0,0,0.94) 0%,rgba(0,0,0,0.84) 14%,rgba(0,0,0,0.7) 28%,rgba(0,0,0,0.35) 59%,rgba(0,0,0,0.18) 75%,rgba(0,0,0,0.06) 89%,rgba(0,0,0,0) 100%)
+
+			.no-cssgradients &
+				background: url(../../img/gradient-top-panel.png) repeat-x
 
 .top-panel-holder
 	background-color: #{$bg-color}
