--- a/src/sass/pages/_catalog.sass
+++ b/src/sass/pages/_catalog.sass
@@ -36,13 +36,16 @@ $c-section-max-width-lg: 1320px !default
 			+size(100%)
 			//background-color: rgba(0, 0, 0, 0.4)
 			+linear-gradient(to top, rgba(0, 0, 0, 0.81) 0, rgba(0, 0, 0, 0.7) 25%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.4) 100%)
+			
+			.no-cssgradients &
+				background: rgba(0, 0, 0, 0.5)
 
 .c-section__align
 	+display-inline-block-middle
-	text-align: left
-	letter-spacing: normal
+	width: calc(100% - 4px)
 	+font($font-size, $line-height)
-	max-width: calc(100% - 4px)
+	letter-spacing: normal
+	text-align: center
 
 .c-section__layout
 	position: relative
@@ -90,8 +93,17 @@ $c-section-max-width-lg: 1320px !default
 	color: $base-color
 	border-color: $base-color
 	margin-bottom: 8rem
-	display: flex
-	justify-content: space-between
+	//display: flex
+	//flex-wrap: wrap
+	//justify-content: space-between
+	display: table
+	width: 100%
+	table-layout: fixed
+
+	& > *
+		//flex: 1 1 100px
+		display: table-cell
+		vertical-align: top
 
 	h2, h3
 		margin: 0
@@ -100,7 +112,7 @@ $c-section-max-width-lg: 1320px !default
 		font-weight: inherit
 		color: inherit
 		border-color: inherit
-		flex: 1 1 12rem
+		//flex: 1 1 12rem
 
 		a
 			text-decoration: none
@@ -118,9 +130,27 @@ $c-section-max-width-lg: 1320px !default
 		+font($font-size, $line-height)
 		color: white
 		padding-top: 20px
+		padding-left: 20px
 
-	& > *
-		flex: 1 1 100px
+	+media('<desk-md')
+		+font(36px, 52px)
+
+		.c-section-description
+			padding-top: 15px
+
+	+media('<tab-lg')
+		display: block
+		margin-bottom: 3rem
+
+		& > *
+			display: block
+
+		h2, h3
+			margin-bottom: 3rem
+
+		.c-section-description
+			padding-top: 0
+			padding-left: 0
 
 .subtitle
 	+font-normal
@@ -261,7 +291,6 @@ $c-section-max-width-lg: 1320px !default
 
 		&.active-tab
 			border-color: $base-color
-			cursor: default
 
 			& > span
 				border-bottom-color: transparent
